--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="activity_main_map_tab_text">地图</string>
     <string name="activity_main_rank_tab_text">定位</string>
     <string name="activity_main_my_tab_text">我的</string>
+    <string name="activity_main_image_view_content_description">description</string>
 </resources>
