--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <string name="activity_main_rank_tab_text">定位</string>
     <string name="activity_main_my_tab_text">我的</string>
     <string name="activity_main_image_view_content_description">description</string>
+    <string name="login_user_text">邮箱号/手机</string>
+    <string name="login_pwd_text">密码</string>
+    <string name="login_lg_text">登录</string>
+    <string name="login_rs_text">注册</string>
+    <string name="login_3lg_text">第三方直接登录</string>
+    <string name="register_mailrs_text">邮箱注册</string>
+    <string name="register_phoners_text">手机注册</string>
+    <string name="register1_mail_text">请输入邮箱</string>
+    <string name="register1_pwd_text">请输入密码</string>
+    <string name="register1_pwd2_text">请再次输入密码</string>
+    <string name="register2_phone_text">请输入手机号码</string>
+    <string name="register2_yzminput_text">请输入验证码</string>
+    <string name="register2_yzm_text">获取验证码</string>
 </resources>
